endpoint for wip return for defective material and endpoint for  getting items of particular date